crates/move-syn/src/tests/imports/snapshots/move_syn__tests__imports__move_stdlib__macros.snap
---
source: crates/move-syn/src/tests/imports/move_stdlib.rs
expression: flat_imports(ast)
---
String -> std::string::String
