crates/move-syn/src/tests/imports/snapshots/move_syn__tests__imports__move_stdlib__type_name.snap
---
source: crates/move-syn/src/tests/imports/move_stdlib.rs
expression: flat_imports(ast)
---
address -> std::address
ascii -> std::ascii
String -> std::ascii::String
